recursion.logo.lessons.recursion.logo.spiral.Spiral.scala.error
Spiral:4: error: not found: value spirale
                case steps => avance(length);gauche(angle);spirale(steps-1,angle,length+increment,increment)}
                                                           ^