recursion.logo.lessons.recursion.logo.spiral.Spiral.scala.code
def spiral(steps:Int, angle:Int, length:Int, increment:Int)    
{
  steps match { case 0 => return
                case steps => avance(length);gauche(angle);spirale(steps-1,angle,length+increment,increment)}
}